--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <nav>
+      <div class="nav-left">
+        <img src="images/logo_nofill_v4.png" alt="" />
+      </div>
+    </nav>
     <h1>Welcome to CS 1 O(1) Society</h1>
     <p>We're coming soon ;)</p>
   </body>
