--- a/index.html
+++ b/index.html
@@ -5,14 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CS 1 O(1) Society</title>
     <link rel="stylesheet" href="styles.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   </head>
   <body>
     <nav>
       <div class="nav-left">
-        <img src="images/logo_nofill_v4.png" alt="" />
+        <!-- <img src="images/logo_nofill_v4.png" alt="" /> -->
+        <img src="images/logo.png" alt="logo" />
+      </div>
+      <div class="nav-right">
+        <a href="#">Home</a>
+        <span class="nav-separator">|</span>
+        <a href="#">Page 2</a>
+        <span class="nav-separator">|</span>
+        <a href="#" style="padding-right: 0px">Page 3</a>
       </div>
     </nav>
-    <h1>Welcome to CS 1 O(1) Society</h1>
-    <p>We're coming soon ;)</p>
+    <main>
+      <h1>Welcome to CS 1 O(1) Society</h1>
+      <p>We're coming soon ;)</p>
+    </main>
   </body>
 </html>
